fix(sidebar): fixed issue that sidebar container is always visible

--- a/casia-angular/src/views/main-page/main-page.component.scss
+++ b/casia-angular/src/views/main-page/main-page.component.scss
@@ -6,6 +6,10 @@
   top: 64px;
   background: none;
 
+  &--closed{
+    display: none;
+  }
+
   &__content {
     width: 100%;
     display: flex;
